--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
@@ -40,7 +40,7 @@
                                      id="save"
                                      update="editForm"
                                      oncomplete="PF('editTemplateDialog').hide();jQuery('#editForm\\:saveButtonToggler').click()"
-                                     value="#{msgs.uebernehmen}"
+                                     value="#{msgs.apply}"
                                      styleClass="button-filled-blue right"/>
                 </p:row>
             </p:panelGrid>
