--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -28,7 +28,7 @@
         <p:column headerText="#{msgs.actions}"
                   styleClass="actionsColumn">
             <p:commandLink id="editTemplateProperty"
-                           title="#{msgs.bearbeiten}"
+                           title="#{msgs.edit}"
                            oncomplete="PF('editTemplateDialog').show()"
                            update="@(.editDialog)">
                 <i class="fa fa-pencil-square-o fa-lg"/>
