--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
@@ -43,7 +43,7 @@
                                      id="save"
                                      update="editForm"
                                      oncomplete="PF('editWorkpieceDialog').hide();jQuery('#editForm\\:saveButtonToggler').click()"
-                                     value="#{msgs.uebernehmen}"
+                                     value="#{msgs.apply}"
                                      styleClass="button-filled-blue right">
                         <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}"
                                                      value="#{objectMode.NONE}"/>
