--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
@@ -70,13 +70,13 @@
         <p:row>
             <div>
                 <!-- Tifheader - Documentname -->
-                <p:outputLabel for="tifHeaderDocumentName" value="#{msgs.tifheaderdocumentname}"/>
+                <p:outputLabel for="tifHeaderDocumentName" value="#{msgs.tifHeaderDocumentName}"/>
                 <p:inputText class="input" id="tifHeaderDocumentName" value="#{ProzesskopieForm.tifHeaderDocumentName}" styleClass="prozessKopieFeldbreite"/>
             </div>
 
             <div>
                 <!-- Tifheader - Imagedescription -->
-                <p:outputLabel for="tifHeaderImageDescription" value="#{msgs.tifheaderimagedescription}"/>
+                <p:outputLabel for="tifHeaderImageDescription" value="#{msgs.tifHeaderImageDescription}"/>
                 <p:inputText class="input" id="tifHeaderImageDescription" value="#{ProzesskopieForm.tifHeaderImageDescription}" styleClass="prozessKopieFeldbreite"/>
             </div>
 
