--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -101,7 +101,7 @@
                                         <h:graphicImage alt="download docket"
                                                         value="/pages/images/buttons/laufzettel_wide.png"
                                                         style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.laufzettelDrucken}"/>
+                                        <h:outputText value="#{msgs.docketPrint}"/>
                                     </h:commandLink>
 
                                     <h:commandLink action="#{BatchForm.editProperties}">
