--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -43,7 +43,7 @@
         </p:column>
 
         <!-- title -->
-        <p:column headerText="#{msgs.arbeitsschritt}" id="taskTitle">
+        <p:column headerText="#{msgs.task}" id="taskTitle">
             <p:rowToggler />
             <h:outputText value="#{item.title}"/>
         </p:column>
@@ -83,19 +83,19 @@
                     <h:outputText value="#{msgs.prioritaet}: "/>
                     <h:outputText value="#{item.priority}"/>
 
-                    <h:outputText value="#{msgs.bearbeitungsbeginn}: " rendered="#{item.processingBegin ne null and !HelperForm.anonymized}"/>
+                    <h:outputText value="#{msgs.processingBegin}: " rendered="#{item.processingBegin ne null and !HelperForm.anonymized}"/>
                     <h:outputText value="#{item.processingBeginAsFormattedString}" rendered="#{item.processingBegin ne null and !HelperForm.anonymized}"/>
 
-                    <h:outputText value="#{msgs.zuletztBearbeitet}: "  rendered="#{item.processingTime ne null and !HelperForm.anonymized}"/>
+                    <h:outputText value="#{msgs.lastEdited}: " rendered="#{item.processingTime ne null and !HelperForm.anonymized}"/>
                     <h:outputText value="#{item.processingTimeAsFormattedString}"  rendered="#{item.processingTime ne null and !HelperForm.anonymized}"/>
 
-                    <h:outputText value="#{msgs.bearbeitungsende}: " rendered="#{item.processingEnd ne null and !HelperForm.anonymized}"/>
+                    <h:outputText value="#{msgs.processingsEnd}: " rendered="#{item.processingEnd ne null and !HelperForm.anonymized}"/>
                     <h:outputText value="#{item.getProcessingEndAsFormattedString(item)}" rendered="#{item.processingEnd ne null and !HelperForm.anonymized}"/>
 
-                    <h:outputText value="#{msgs.letzteAktualisierungDurch}: " rendered="#{item.processingUser ne null and item.processingUser.id ne null and !HelperForm.anonymized}"/>
+                    <h:outputText value="#{msgs.lastUpdatedBy}: " rendered="#{item.processingUser ne null and item.processingUser.id ne null and !HelperForm.anonymized}"/>
                     <h:outputText value="#{item.processingUser.fullName}" rendered="#{item.processingUser ne null and item.processingUser.id ne null and !HelperForm.anonymized}"/>
 
-                    <h:outputText value="#{msgs.aktualisierungstyp}: " rendered="#{item.editTypeEnum ne null}"/>
+                    <h:outputText value="#{msgs.editType}: " rendered="#{item.editTypeEnum ne null}"/>
                     <h:outputText value="#{item.editTypeEnum.title}" rendered="#{item.editTypeEnum ne null}"/>
 
                     <h:outputText value="#{msgs.automaticTask}: " rendered="#{item.scriptPath ne null and item.scriptPath ne ''}"/>
@@ -113,7 +113,7 @@
     </p:confirmDialog>
 
     <p:commandButton action="#{TemplateForm.newTask}"
-                     value="#{msgs.schrittHinzufuegen}"
+                     value="#{msgs.taskAdd}"
                      rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('addTask',item.template.project.client.id,item.template.project.id)}"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
