--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -22,11 +22,11 @@
             <p:row>
                 <div>
                     <!-- new password -->
-                    <h:outputLabel for="newPassword" value="#{msgs.neuesPasswort}"/>
+                    <h:outputLabel for="newPassword" value="#{msgs.newPassword}"/>
                     <p:password redisplay="true" id="newPassword"
                                 class="password"
                                 value="#{LoginForm.passwortAendernNeu1}"
-                                label="#{msgs.neuesPasswort}"
+                                label="#{msgs.newPassword}"
                                 required="true"/>
                 </div>
 
