--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxActivities.xhtml
@@ -70,7 +70,7 @@
                        class="eingabeBoxen" style="margin-top:20px">
                     <tr>
                         <td class="eingabeBoxen_row1">
-                            <h4>#{msgs.moeglicheAktionen}</h4>
+                            <h4>#{msgs.possibleActions}</h4>
                         </td>
                     </tr>
                     <tr>
@@ -91,7 +91,7 @@
                                         <h:outputText value="#{msgs.location}: "/>
                                         <h:outputText
                                                 value="#{AktuelleSchritteForm.mySchritt.process.blockedUser.location}"/>
-                                        <h:outputText value="#{msgs.lebenszeichen} "/>
+                                        <h:outputText value="#{msgs.lastActionBefore} "/>
                                         <h:outputText
                                                 value="#{AktuelleSchritteForm.mySchritt.process.blockedMinutes} min #{AktuelleSchritteForm.mySchritt.process.blockedSeconds} sec"/>
                                     </h:panelGrid>
@@ -120,7 +120,7 @@
                                     <h:graphicImage value="/pages/images/buttons/admin4b.gif" alt="execute script"
                                                     style="margin-right:3px;vertical-align:middle"/>
                                     <h:outputText
-                                            value="#{msgs.scriptAusfuehren}: #{AktuelleSchritteForm.mySchritt.scriptName}"/>
+                                            value="#{msgs.scriptExecute}: #{AktuelleSchritteForm.mySchritt.scriptName}"/>
                                 </h:commandLink>
 
                                 <!-- tiffHeaderDownload-button -->
