--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
@@ -31,7 +31,7 @@
                 <p:outputLabel for="project" value="#{msgs.project}"/>
                 <p:selectOneMenu id="project" value="#{TemplateForm.projectSelect}"
                                  required="#{empty param['editForm:saveButtonToggler']}">
-                    <f:selectItem itemValue="" itemLabel="#{msgs.bitteAuswaehlen}"/>
+                    <f:selectItem itemValue="" itemLabel="#{msgs.selectPlease}"/>
                     <f:selectItems value="#{TemplateForm.projectsSelectList}"/>
                     <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectOneMenu>
