--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -29,7 +29,7 @@
             <p:rowToggler/>
         </p:column>
 
-        <p:column headerText="#{msgs.titel}">
+        <p:column headerText="#{msgs.title}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
@@ -66,7 +66,7 @@
         <p:rowExpansion styleClass="expansion-class">
             <div class="row-expansion-wrapper">
                 <p:panelGrid columns="2" columnClasses="label,value">
-                    <h:outputText value="#{msgs.internesSpeicherformat}:"/>
+                    <h:outputText value="#{msgs.internFileFormat}:"/>
                     <h:outputText value="#{item.fileFormatInternal}"/>
 
                     <h:outputText value="#{msgs.dmsExportformat}:"/>
