--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml
@@ -30,7 +30,7 @@
                 </p:inputText>
             </div>
             <div>
-                <p:outputLabel for="priority" value="#{msgs.prioritaet}"/>
+                <p:outputLabel for="priority" value="#{msgs.priority}"/>
                 <p:inputText id="priority" value="#{ProzessverwaltungForm.task.priority}" required="#{empty param['editForm:saveButtonToggler']}" class="input">
                     <p:ajax event="blur"/>
                 </p:inputText>
