--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxDetails.xhtml
@@ -25,7 +25,7 @@
         <p:column headerText="#{msgs.order}">
             <h:outputText value="#{item.ordering}"/>
         </p:column>
-        <p:column headerText="#{msgs.prioritaet}">
+        <p:column headerText="#{msgs.priority}">
             <h:outputText value="#{item.priority}"
                           rendered="#{item.priority!=10}"/>
             <h:outputText value="#{msgs.correction}"
