--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -27,7 +27,7 @@
         <p:column headerText="#{msgs.ldapGroup}">
             <h:outputText value="#{item.title}"/>
         </p:column>
-        <p:column headerText="#{msgs.homeVerzeichnis}">
+        <p:column headerText="#{msgs.homeDirectory}">
             <h:outputText value="#{item.homeDirectory}"/>
         </p:column>
         <p:column headerText="gidNumber">
