--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
@@ -24,7 +24,7 @@
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
 
-        <p:column headerText="#{msgs.titel}">
+        <p:column headerText="#{msgs.title}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
@@ -32,7 +32,7 @@
             <h:outputText value="#{item.file}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.metadatenSortierungNachRegelsatz}" styleClass="checkboxColumn" style="width: initial">
+        <p:column headerText="#{msgs.metadataSortByRuleset}" styleClass="checkboxColumn" style="width: initial">
             <ui:fragment rendered="#{item.orderMetadataByRuleset}">
                 <i class="fa fa-check-square-o fa-lg checkbox-checked"/>
             </ui:fragment>
@@ -44,8 +44,7 @@
         <p:column headerText="#{msgs.actions}"
                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editRuleset')}"
                   styleClass="actionsColumn">
-            <h:link outcome="rulesetEdit"
-                    title="#{msgs.regelsatzBearbeiten}">
+            <h:link outcome="rulesetEdit" title="#{msgs.rulesetEdit}">
                 <f:param name="id" value="#{item.id}" />
                 <i class="fa fa-pencil-square-o fa-lg"/>
             </h:link>
