Use translated message keys in metadata editor

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -48,7 +48,7 @@
             </p:panelGrid>
 
             <p:panel>
-                <p:outputLabel for="tifFolders" value="#{msgs.aktuellerOrdner}" style="vertical-align: top"/>
+                <p:outputLabel for="tifFolders" value="#{msgs.currentFolder}" style="vertical-align: top"/>
                 <p:selectOneMenu id="tifFolders" value="#{Metadaten.currentTifFolder}" converter="#{URIConverter}" style="margin: 0 5px">
                     <f:selectItem value="#{null}" itemLabel="Please select a tiff folder!" noSelectionOption="true"/>
                     <f:selectItems value="#{Metadaten.allTifFolders}"/>
