--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -23,7 +23,7 @@
                              onclick="PF('dialogAddDocStrucType').show();"
                              icon="fa fa-plus-circle fa-lg"
                              iconPos="right"/>
-            <p:commandButton id="deleteButton" value="#{msgs.loeschen}"
+            <p:commandButton id="deleteButton" value="#{msgs.delete}"
                              action="#{Metadaten.deleteNode}"
                              update="metadataEditor"
                              icon="fa fa-minus-circle fa-lg"
