Use translated message keys

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
@@ -27,7 +27,7 @@
                          iconPos="right"
                          onclick="PF('sticky-notifications').renderMessage({'summary':'#{msgs.metadataSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                          update="notifications"/>
-        <p:commandButton value="#{msgs.validieren}"
+        <p:commandButton value="#{msgs.validate}"
                          action="#{Metadaten.validate}"
                          update="metadataEditor"
                          icon="fa fa-check fa-lg"
