Add home link to logo image

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -20,8 +20,12 @@
     <div class="wrapper">
 
         <section id="portal-logo">
-            <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160" id="kitodo-logo"/>
-            <h:graphicImage name="images/kitodo-icon.svg" alt="Kitodo.Production" width="40" id="kitodo-icon"/>
+            <h:outputLink value="start.jsf">
+                <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160" id="kitodo-logo"/>
+            </h:outputLink>
+            <h:outputLink value="start.jsf">
+                <h:graphicImage name="images/kitodo-icon.svg" alt="Kitodo.Production" width="40" id="kitodo-icon"/>
+            </h:outputLink>
         </section>
 
         <section id="portal-search">
